xee-xpath/tests/snapshots/xpath__cast_g_day_tz.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'---01Z' cast as xs:gDay\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                GDay(
                    GDay {
                        day: 1,
                        offset: Some(
                            +00:00,
                        ),
                    },
                ),
            ),
        ),
    },
)
