xee-xpath/tests/snapshots/xpath__cast_g_month.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'--01' cast as xs:gMonth\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                GMonth(
                    GMonth {
                        month: 1,
                        offset: None,
                    },
                ),
            ),
        ),
    },
)
