xee-xpath/tests/snapshots/xpath__cast_g_month_back_to_string.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"('--01' cast as xs:gMonth) cast as xs:string\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "--01",
                ),
            ),
        ),
    },
)
