xee-xpath/tests/snapshots/xpath__cast_g_year.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'2019' cast as xs:gYear\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                GYear(
                    GYear {
                        year: 2019,
                        offset: None,
                    },
                ),
            ),
        ),
    },
)
