xee-xpath/tests/snapshots/xpath__cast_g_year_back_to_string.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"('2019' cast as xs:gYear) cast as xs:string\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "2019",
                ),
            ),
        ),
    },
)
