xee-xpath/tests/snapshots/xpath__cast_g_year_longer.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'20190' cast as xs:gYear\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                GYear(
                    GYear {
                        year: 20190,
                        offset: None,
                    },
                ),
            ),
        ),
    },
)
