xee-xpath/tests/snapshots/xpath__cast_g_year_longer_back_to_string.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"('20190' cast as xs:gYear) cast as xs:string\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "20190",
                ),
            ),
        ),
    },
)
