xee-xpath/tests/snapshots/xpath__cast_g_year_month.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'2019-01' cast as xs:gYearMonth\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                GYearMonth(
                    GYearMonth {
                        year: 2019,
                        month: 1,
                        offset: None,
                    },
                ),
            ),
        ),
    },
)
