xee-xpath/tests/snapshots/xpath__cast_g_year_tz.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'2019Z' cast as xs:gYear\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                GYear(
                    GYear {
                        year: 2019,
                        offset: Some(
                            +00:00,
                        ),
                    },
                ),
            ),
        ),
    },
)
