xee-xpath/tests/snapshots/xpath__cast_time_z.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'00:00:00Z' cast as xs:time\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Time(
                    00:00:00,
                    Some(
                        +00:00,
                    ),
                ),
            ),
        ),
    },
)
